manifests/app/rabbit.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      queue: rabbit
  template:
    metadata:
      labels:
        queue: rabbit
    spec:
      containers:
      - name: rabbit
        image: rabbitmq:3.8-management-alpine
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5672
        - containerPort: 15672
---

apiVersion: v1
kind: Service
metadata:
  name: rabbit
spec:
  selector:
     queue: rabbit
  ports:
  - name: a
    port: 5672
    targetPort: 5672
  - name: b
    port: 15672
    targetPort: 15672
