manifests/app/service-one-db.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceonedb
spec:
  replicas: 1
  selector:
    matchLabels:
      db: serviceonedb
  template:
    metadata:
      labels:
        db: serviceonedb
    spec:
      containers:
      - name: serviceonedb
        image: mongo:3.7
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: service-one-db-persistent-storage
          mountPath: /data/db
        
      volumes:
      - name: service-one-db-persistent-storage
        persistentVolumeClaim:
          claimName: service-one-db-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: service-one-db
spec:
  selector:
    db: serviceonedb
  ports:
  - port: 27017
    targetPort: 27017
