manifests/app/service-two-db.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicetwodb
spec:
  replicas: 1
  selector:
    matchLabels:
      db: servicetwodb
  template:
    metadata:
      labels:
        db: servicetwodb
    spec:
      containers:
      - name: servicetwodb
        image: mysql/mysql-server:8.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: service-two-db-persistent-storage
          mountPath: /var/lib/mysql
      
      volumes:
      - name: service-two-db-persistent-storage
        persistentVolumeClaim:
          claimName: service-two-db-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: service-two-db
spec:
  selector:
    db: servicetwodb
  ports:
  - port: 3306
    targetPort: 3306
