manifests/app/web-application.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: 127.0.0.1:30400/web-application:latest
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        ports:
        - containerPort: 4200
        volumeMounts:
        - name: web-app-persistent-storage
          mountPath: /usr/share/nginx/html

      volumes:
      - name: web-app-persistent-storage
        persistentVolumeClaim:
          claimName: web-app-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: web-application
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - port: 4200
    targetPort: 4200


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  labels:
    name: web-app-ingress
spec:
  rules:
  - host: app.192.168.49.2.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-application
            port: 
              number: 4200
